Make favicon dark-mode responsive Set glyph-browser font to sans-serif Correct dark mode stop colors

--- a/glyph-browser.css
+++ b/glyph-browser.css
@@ -11,6 +11,7 @@
 
 body {
   background-color: var(--surface-000);
+  font-family: sans-serif;
   color: var(--text);
   padding: 0;
   margin: 0;
@@ -93,32 +94,30 @@ main {
   background-color: var(--accent);
   color: var(--surface-000);
   container: display / inline-size;
-  clip-path: polygon(
-    50% 0%,
-    62.5% 3.35%,
-    75% 6.7%,
-    84.15% 15.85%,
-    93.3% 25%,
-    96.65% 37.5%,
-    100% 50%,
-    96.65% 62.5%,
-    93.3% 75%,
-    84.15% 84.15%,
-    75% 93.3%,
-    62.5% 96.65%,
-    50% 100%,
-    37.5% 96.65%,
-    25% 93.3%,
-    15.85% 84.15%,
-    6.7% 75%,
-    3.35% 62.5%,
-    0% 50%,
-    3.35% 37.5%,
-    6.7% 25%,
-    15.85% 15.85%,
-    25% 6.7%,
-    37.5% 3.35%
-  );
+  clip-path: polygon(50% 0%,
+      62.5% 3.35%,
+      75% 6.7%,
+      84.15% 15.85%,
+      93.3% 25%,
+      96.65% 37.5%,
+      100% 50%,
+      96.65% 62.5%,
+      93.3% 75%,
+      84.15% 84.15%,
+      75% 93.3%,
+      62.5% 96.65%,
+      50% 100%,
+      37.5% 96.65%,
+      25% 93.3%,
+      15.85% 84.15%,
+      6.7% 75%,
+      3.35% 62.5%,
+      0% 50%,
+      3.35% 37.5%,
+      6.7% 25%,
+      15.85% 15.85%,
+      25% 6.7%,
+      37.5% 3.35%);
 }
 
 #display-glyph {
